--- a/html/exercicioListas01.html
+++ b/html/exercicioListas01.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style2.css">
     <title>Exercico listas 01</title>
   </head>
   <body>
     <h1>Viagens Espaciais</h1>
-    <p>Conheça algumas pessoas que já participaram de viagem espaciais:</p>
+    <p>Conheça algumas pessoas que já participaram de viagens espaciais:</p>
     <ul>
       <li>
         <h2>1961-1979</h2>
