--- a/java/src/mariajulia/devsuperior/gitGithub/index.html
+++ b/java/src/mariajulia/devsuperior/gitGithub/index.html
@@ -7,7 +7,7 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>Página Home</h1>
+    <h1>Página inicial</h1>
     <a href="vendas.html">Página de Vendas</a>
 </body>
 </html>
