--- a/java/src/mariajulia/devsuperior/gitGithub/vendas.html
+++ b/java/src/mariajulia/devsuperior/gitGithub/vendas.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Página de Vendas</h1>
-    <p>Vendas = R$5.000,00</p>
     <a href="index.html">Página Home</a>
+    <p>Venda 2</p>
+    <p>Venda 3</p>
 </body>
 </html>
